# bitmachine

./: CHANGELOG.md  bitmachine.cabal  cabal.project
src/: BitCircuit.hs  BitMachine.hs  Bits.hs  Circuit.hs  Effects.hs  Eval.hs  Proofs.hs
src/BitMachine/: BitCircuit.hs  Bits.hs  Circuit.hs  Effects.hs  Eval.hs  Proofs.hs  Simplify.hs
src/BitMachine/BitCircuit/: Combinators.hs  Pretty.hs
src/BitMachine/Circuit/: Combinators.hs  Components.hs  Pretty.hs
src/Data/List/: Sized.hs
test/: Main.hs
