cabal-version:      3.0
name:               bitmachine
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        BitMachine
        Circuit
        Eval
        Bits
        BitCircuit
        Proofs
        Effects
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.19.1.0,
        vector,
        containers,
        text,
        optics,
        profunctors,
        constraints,
        vector-sized,
        ghc-typelits-natnormalise,
        ghc-typelits-knownnat
        
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        TypeFamilies
        DataKinds
        NoStarIsType
    --     RebindableSyntax

test-suite bitblast-test
    Type: exitcode-stdio-1.0
    hs-source-dirs: test 
    main-is: Main.hs
    build-depends: base, bitmachine, hspec
